--- a/src/components/recommendation/rec.module.css
+++ b/src/components/recommendation/rec.module.css
@@ -1,61 +1,8 @@
-/* .rec_title {
-    font-size: 24px;
-    font-weight: 500;
-    color: white;
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    z-index: 33;
-
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-.play_icon {
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
-    width: 70px;
-    display: block;
-    z-index: 12;
-}
-
-.rec_image {
-    width: 100%;
+.image_box {
+    position: relative;
+    z-index: 1;
     height: 100%;
-    object-fit: cover;
-}
-
-.rec_image:hover .play_icon {
-    display: block;
-}
-
-.rec_image:hover {
     cursor: pointer;
-}
-
-.image_box {
-    position: relative;
-    z-index: 1;
-}
-
-.dimmer {
-    position: absolute;
-    z-index: 22;
-    top: 0;
-    left: 0;
-    background-color: transparent;
-    width: 100%;
-    height: 100%;
-
-    &:hover {
-        background-color: rgba(0, 0, 0, .2);
-    }
-} */
-.image_box {
-    position: relative;
-    z-index: 1;
 }
 
 .rec_title {
@@ -67,6 +14,7 @@
     top: 10px;
     z-index: 33;
     text-decoration: none;
+
     &:hover {
         cursor: pointer;
         text-decoration: underline;
@@ -75,17 +23,17 @@
 
 .play_icon {
     position: absolute;
-    right: 50%;
+    left: 50%;
     cursor: pointer;
-    bottom: 50%;
-    width: 70px;
-    transform: translate(50%, 50%);
+    top: 50%;
+    width: 90px;
+    transform: translate(-50%, -50%);
     display: none;
     transition: transform .1s ease-out;
-    /* Установите display: none по умолчанию */
     z-index: 55;
+
     &:hover {
-        transform: translate(50%, 50%) scale(1.4);
+        transform: translate(-50%, -50%) scale(1.1);
     }
 }
 
@@ -94,7 +42,7 @@
     height: 100%;
     object-fit: cover;
     position: relative;
-   
+
     /* Добавьте position: relative для абсолютного позиционирования внутри */
 }
 
@@ -115,7 +63,7 @@
     top: 0;
     left: 0;
     background-color: transparent;
-    transition: background-color .3s ease-in;
+    transition: background-color .1s ease-in;
     width: 100%;
     height: 100%;
 
@@ -126,5 +74,6 @@
 }
 
 .image_box:hover .dimmer {
-    background-color: rgba(0, 0, 0, .2); /* Сохраняем затемнение при наведении */
+    background-color: rgba(0, 0, 0, .2);
+    /* Сохраняем затемнение при наведении */
 }
