--- a/src/components/recommendation/image/secondary.image.module.css
+++ b/src/components/recommendation/image/secondary.image.module.css
@@ -66,7 +66,8 @@
 
     &:hover {
         cursor: pointer;
-        text-decoration: underline;
+        /* text-decoration: underline; */
+        color: rgba(255, 255, 255, .8);
     }
 }
 
