--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,10 @@
 }
 
 body {
+  margin: 0 auto;
+  max-width: 1900px;
   min-height: 100svh;
-  width: 100vw;
+  min-width: 100%;
   height: 2000px;
+  /* background-color: azure; */
 }
