--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 }
 
 #root {
+  /* min-height: 100svh; */
   height: 100%;
+
 }
 
 body {
@@ -13,6 +15,6 @@ body {
   max-width: 1900px;
   min-height: 100svh;
   min-width: 100%;
-  height: 2000px;
+  /* height: 2000px; */
   /* background-color: azure; */
 }
