--- a/src/components/widgets/cards/literature/secondary.image.module.css
+++ b/src/components/widgets/cards/literature/secondary.image.module.css
@@ -12,6 +12,8 @@
 }
 
 .book_icon {
+    background-color: black;
+    padding: 5px;
     position: absolute;
     left: 10px;
     cursor: pointer;
