--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,5 @@ body {
   min-height: 100svh;
   min-width: 100%;
   /* height: 2000px; */
-  /* background-color: azure; */
+  /* background-color: rgb(33, 31, 31); */
 }
