--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -29,6 +29,8 @@
 
 .lang_list {
     display: flex;
+    align-items: center;
+    line-height: 1;
     list-style: none;
     gap: 1rem;
 }
@@ -37,6 +39,8 @@
 .lang_link {
     text-decoration: none;
     color: black;
+    /* line-height: 1; */
+    /* vertical-align: middle; */
     font-weight: 700;
     font-size: var(--link-font-size);
 }
