--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,10 +1,8 @@
 :root {
-    --link-font-size: 1.1rem
+    --link-font-size: 1.1rem;
 }
 
-.header_wrapper {
 
-}
 
 .header {
     display: flex;
@@ -23,7 +21,7 @@
 }
 
 .auth_link {
-    color: black;
+    color: inherit;
     font-weight: 700;
 }
 
@@ -38,9 +36,7 @@
 
 .lang_link {
     text-decoration: none;
-    color: black;
-    /* line-height: 1; */
-    /* vertical-align: middle; */
+    color: inherit;
     font-weight: 700;
     font-size: var(--link-font-size);
 }
