--- a/src/components/pages/details/player.module.css
+++ b/src/components/pages/details/player.module.css
@@ -83,7 +83,7 @@
 /* Стили для Chrome, Safari, Opera и Edge Chromium */
 .progress_bar input[type="range"]::-webkit-slider-runnable-track {
     background-color: #ffffff;
-    height: 8px;
+    height: 6px;
     width: 100%;
     border-radius: 1px;
     border: 0.2px solid #b4b0b0;
@@ -92,10 +92,11 @@
 .progress_bar input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    margin-top: -6px;
+    margin-top: -7px;
+    margin-left: -4px;
     background-color: #ffffff;
     height: 18px;
-    width: 10px;
+    width: 9px;
     border: 1px solid #474646;
     border-radius: 2px;
 
@@ -105,7 +106,7 @@
 /* Стили для Firefox */
 .progress_bar input[type="range"]::-moz-range-track {
     background-color: #ffffff;
-    height: 8px;
+    height: 6px;
     width: 100%;
     border-radius: 1px;
     border: 0.2px solid #b4b0b0;
@@ -151,12 +152,12 @@
 .time {
     font-size: 13px;
     text-align: center;
-    color: gray;
+    color: inherit;
 }
 
 .name {
     font-size: 14px;
-    color: gray;
+    color: inherit;
 }
 
 .controls {
