--- a/src/player.css
+++ b/src/player.css
@@ -6,15 +6,22 @@
     font-family: inherit;
     width: 100%;
     padding: 10px 15px;
-    background-color: #fff;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
-  }
+}
+
+#dark__container {
+    background-color: #161616;
+}
+
+#light__container {
+    background-color: #fff;
+}
 
 .rhap_horizontal-reverse {
     flex-direction: row-reverse;
     height: 15px;
     box-shadow: none;
-  
+
 }
 
 
@@ -76,13 +83,21 @@
     border-radius: 3px;
     box-shadow: rgba(134, 134, 134, 0.5) 0 0 5px;
 }
+
 .rhap_progress-filled {
     height: 100%;
     position: absolute;
     z-index: 2;
-    background-color: black;
     border-radius: 2px;
-  }
+}
+
+#light__progress {
+    background-color: black;
+}
+
+#dark__progress {
+    background-color: gray;
+}
 
 .rhap_repeat-button {
     font-size: 20px;
@@ -91,6 +106,16 @@
     color: black;
     margin-right: 6px;
 }
+
+#dark__repeat {
+    color: gray !important;
+
+}
+
+#light__repeat {
+    color: black;
+}
+
 
 /* .rhap_controls-section {
     display: flex;
@@ -125,10 +150,17 @@
 }
 
 .rhap_time {
-    color: black;
     font-size: 15px;
     user-select: none;
     -webkit-user-select: none;
+}
+
+#dark__time {
+    color: rgb(222, 219, 219)
+}
+
+#light__time {
+    color: black;
 }
 
 .rhap_volume-controls {
@@ -148,13 +180,29 @@
     margin-right: 6px;
 }
 
+#dark__volume {
+    color: rgb(222, 219, 219);
+}
+
+#light__volume {
+    color: black;
+}
+
 .rhap_main-controls-button {
     margin: 0 3px;
-    color: black;
     font-size: 32px;
+    color: black;
     width: 32px;
     height: 32px;
 
+}
+
+#dark__main {
+    color: rgb(222, 219, 219);
+}
+
+#light__main {
+    color: black;
 }
 
 .rhap_main-controls {
