--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ body {
   min-width: calc(100% - 15px);
 }
 
+.custom__skeleton {
+  --mantine-color-body: rgb(15, 15, 15);
+  --mantine-color-gray-3: rgb(17, 17, 17);
+}
+
 .dark__theme {
   color: white;
   background-color: rgba(0, 0, 0, 0.977);
@@ -28,7 +33,7 @@ body {
   color: black;
   background-color: rgb(255, 255, 255);
   --scrollbar-bg: #f1f1f1;
-    --scrollbar-thumb: #676767;
+  --scrollbar-thumb: #676767;
 }
 
 /* Общие стили для скролла */
