--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: background-color 0.4s ease;
 }
 
 #root {
@@ -10,11 +11,14 @@
 
 }
 
+
+
 body {
   margin: 0 auto;
   max-width: 1900px;
   min-height: 100svh;
   min-width: calc(100% - 15px);
+
 }
 
 .custom__skeleton {
@@ -23,6 +27,7 @@ body {
 }
 
 .dark__theme {
+  /* transition: background-color 0.3s ease; */
   color: white;
   background-color: rgba(0, 0, 0, 0.977);
   --scrollbar-bg: #202020;
@@ -30,6 +35,7 @@ body {
 }
 
 .light__theme {
+  /* transition: background-color 0.4s ease;  */
   color: black;
   background-color: rgb(255, 255, 255);
   --scrollbar-bg: #f1f1f1;
