--- a/src/components/pages/news/root.module.css
+++ b/src/components/pages/news/root.module.css
@@ -1,12 +1,16 @@
 .wrap_news {
     display: flex;
     height: 100%;
-    background-color: rgb(1, 24, 10) ;
+    /* background-color: rgb(1, 24, 10) ; */
+    background: rgb(14, 62, 9);
+    /* background: linear-gradient(174deg, rgb(10, 41, 6) 13%, rgba(1, 24, 10, 1) 100%); */
+    background: linear-gradient(350deg, #082221 10%, rgb(7, 32, 32) 100%);
+    /* background: linear-gradient(174deg, #011107 13%, rgb(1, 35, 14) 100%); */
 }
 
 .menu_box {
     width: 460px;
     height: 100%;
-    border-right: 1px solid rgba(0,0,0, .2);
+    border-right: 1px solid rgba(0, 0, 0, .2);
     padding: 20px;
 }
