--- a/src/components/pages/news/tabs/tabs.module.css
+++ b/src/components/pages/news/tabs/tabs.module.css
@@ -20,6 +20,8 @@
 .panel {
     height: calc(100vh - 60px);
     overflow: auto;
+    display: flex;
+    flex-direction: column;
     padding: 10px;
     gap: 30px;
 }
