--- a/src/components/pages/news/root.module.css
+++ b/src/components/pages/news/root.module.css
@@ -9,7 +9,8 @@
 }
 
 .menu_box {
-    width: 450px;
+    width: 400px;
+    /*min-width: 450px;*/
     height: 100%;
     border-right: 1px solid rgba(0, 0, 0, .2);
 
