--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -20,6 +20,16 @@
     gap: 2rem
 }
 
+.auth_item {
+    padding: 4px;
+
+}
+
+
+.auth_item:hover {
+    background-color: rgba(128, 128, 128, 0.08);
+}
+
 .auth_link {
     color: inherit;
     font-weight: 700;
