--- a/src/components/pages/news/root.module.css
+++ b/src/components/pages/news/root.module.css
@@ -1,18 +1,12 @@
 .wrap_news {
     display: flex;
     height: 100%;
-    /* background-color: rgb(1, 18, 8) ; */
-    /* background: rgb(14, 62, 9); */
-    /* background: linear-gradient(174deg, rgb(10, 41, 6) 13%, rgba(1, 24, 10, 1) 100%); */
-    background: linear-gradient(350deg, #082221 10%, rgb(7, 32, 32) 100%);
-    /* background: linear-gradient(174deg, #021c0c 13%, rgb(1, 21, 9) 100%); */
+    /* background-color: hsl(210, 29%, 29%); */
 }
 
 .menu_box {
     width: 400px;
-
     height: 100%;
     border-right: 1px solid rgba(0, 0, 0, .2);
-
     padding: 20px;
 }
