--- a/src/components/navigation-menu/notification.module.css
+++ b/src/components/navigation-menu/notification.module.css
@@ -4,17 +4,11 @@
     top: -300px;
     left: 160px;
     transition: all 0.3s;
-    border-radius: 10px;
     color: #fff;
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
+    border-radius: 5px;
     width: 380px;
     background-color: transparent;
 }
 
 
-
-/* @media screen and (min-width: 1200px) {
-    .wrap {
-        left: 140px
-    } 
-} */
