--- a/src/components/pages/details/header-details/header.module.css
+++ b/src/components/pages/details/header-details/header.module.css
@@ -32,7 +32,7 @@
 
 .auth_link {
     color: inherit;
-    font-weight: 700;
+    font-weight: 600;
 }
 
 .lang_list {
@@ -44,11 +44,12 @@
 
 .lang_link {
     text-decoration: none;
-    color: inherit;
-    font-weight: 700;
+    color: white;
+    /* color: inherit; */
+    font-weight: 500;
     font-size: var(--link-font-size);
 }
 
 .input_box {
-    /* width: 25rem; */
+    width: 25rem;
 }
