--- a/src/index.css
+++ b/src/index.css
@@ -2,29 +2,23 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
-
-
 
 #root {
-  /* min-height: 100svh; */
   height: 100%;
-
 }
 
-
 body {
+  position: relative;
   margin: 0 auto;
   max-width: 1900px;
   min-height: 100svh;
-  min-width: calc(100% - 15px);
+  /* width: calc(100vw - 16px); */
 }
 
 .transition {
   transition: background-color 0.4s ease;
 }
-
 
 .custom__skeleton {
   --mantine-color-body: rgb(41, 41, 41);
@@ -49,6 +43,7 @@ body {
 
 /* Общие стили для скролла */
 html {
+  width: 100vw;
   scrollbar-width: auto;
   scrollbar-color: var(--scrollbar-bg) var(--scrollbar-thumb);
 }
@@ -70,8 +65,6 @@ html {
 .m_576c9d4::before {
   border-color: #4c4c4c1a;
   border-width: 1px;
-
-
 }
 
 @media (hover: hover) {
@@ -86,7 +79,6 @@ html {
 
 .light__theme .m_539e827b:where([data-active]) {
   --tabs-color: rgb(15, 15, 15);
-  
 }
 
 
@@ -165,7 +157,7 @@ html {
 
 
 .dark__theme .mantine-Spotlight-search {
-  color: white
+  color: rgb(231, 231, 231)
 }
 
 .light__theme .m_d49bb8ef:where([data-selected]) {
@@ -173,8 +165,29 @@ html {
   color: black;
 }
 
+.light__theme .mantine-Spotlight-actionDescription {
+  color: black;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+
+.dark__theme .mantine-Spotlight-actionDescription {
+  color: gray;
+  font-size: 12px;
+  font-weight: 600;
+}
+
 
 .dark__theme .m_d49bb8ef:where([data-selected]) {
   background-color: rgb(57, 57, 57);
 }
 
+
+.ui  {
+  width: 100%;
+}
+
+.ui.search .prompt  {
+  border-radius: 0;
+}
